--- a/OutSIDE/OutSIDE.csproj
+++ b/OutSIDE/OutSIDE.csproj
@@ -55,12 +55,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\AccountModel.cs" />
+    <Compile Include="Classes\BareBones.cs" />
     <Compile Include="Classes\OperatingSystemModel.cs" />
     <Compile Include="Forms\Dialogs\FrmAbout.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Dialogs\FrmAbout.Designer.cs">
       <DependentUpon>FrmAbout.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Dialogs\FrmAccountDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Dialogs\FrmAccountDetails.Designer.cs">
+      <DependentUpon>FrmAccountDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Dialogs\FrmNewOS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Dialogs\FrmNewOS.Designer.cs">
+      <DependentUpon>FrmNewOS.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Dockable\FrmCodeView.cs">
       <SubType>Form</SubType>
@@ -84,6 +98,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\Dialogs\FrmAbout.resx">
       <DependentUpon>FrmAbout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Dialogs\FrmAccountDetails.resx">
+      <DependentUpon>FrmAccountDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Dialogs\FrmNewOS.resx">
+      <DependentUpon>FrmNewOS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Dockable\FrmCodeView.resx">
       <DependentUpon>FrmCodeView.cs</DependentUpon>
@@ -119,6 +139,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="OpenWindow.ico" />
+    <None Include="Resources\account_settings_icon.jpg" />
+    <None Include="Resources\new.png" />
     <None Include="Resources\OpenWindow.jpg" />
   </ItemGroup>
   <ItemGroup />
